Moved various SimpleForm widgets out into their own files for readability. Added radio buttons and booleans. Fixed margin top for hints

--- a/app/assets/stylesheets/light_mobile/simple_form.scss
+++ b/app/assets/stylesheets/light_mobile/simple_form.scss
@@ -1,4 +1,8 @@
-@import 'light_mobile/buttons.scss';
+@import 'light_mobile/simple_form/boolean';
+@import 'light_mobile/simple_form/buttons';
+@import 'light_mobile/simple_form/check_boxes';
+@import 'light_mobile/simple_form/dates_and_times';
+@import 'light_mobile/simple_form/hints_and_errors';
 
 input[type=text], input[type=password], input[type=tel], input[type=email], input[type=number], select, textarea {
   border: 1px solid #d5d6d6;
@@ -27,105 +31,11 @@ input[type=text], input[type=password], input[type=tel], input[type=email], inpu
     }
   }
 
-  // Time- and date-selects should be limited in size to not fill multiple lines.
-  .input.time > select.time {
-    width: 60px;
-  }
-
-  .input.date > select.date, .input.datetime > select.datetime {
-    &:nth-child(4) {
-      width: 70px;
-    }
-
-    &:nth-child(3) {
-      width: 110px;
-    }
-
-    &:nth-child(2) {
-      width: 60px;
-    }
-
-    &:nth-child(5), &:nth-child(6) {
-      width: 60px;
-    }
-  }
-
-  .input.check_boxes {
-    border: 1px solid #cecece;
-    border-radius: 10px;
-    margin-bottom: 20px;
-
-    > label {
-      padding: 10px;
-      font-weight: bold;
-    }
-
-    /* The first check-box element should have a border on the top to make a seperation between that and the label of the input */
-    > :nth-child(2) {
-      border-top: 1px solid #cecece;
-    }
-
-    /* All the check-box elements should have a border on the bottom (not the title-label and the last hidden element) */
-    > :not(:first-child):not(:nth-last-child(2)) {
-      border-bottom: 1px solid #cecece;
-    }
-
-    /* When the selected background-color appear on the last element, it should bent the lower corners to fit the borders */
-    > :nth-last-child(2) {
-      border-bottom-left-radius: 9px;
-      border-bottom-right-radius: 9px;
-    }
-
-    span.checkbox {
-      display: block;
-
-      label {
-        display: inline-block;
-        padding-left: 5px;
-        padding: 10px;
-      }
-
-      input[type=checkbox] {
-        display: inline;
-        width: auto;
-        margin-left: 10px;
-        border: 1px solid black;
-      }
-
-      &.light-mobile-checked {
-        background: linear-gradient(#7db1e1, #5995cb);
-        transition: background 1000ms linear;
-      }
-    }
-  }
-
   textarea {
     margin-top: 5px;
     width: 100%;
     height: 70px;
     display: inline-block;
     box-sizing: border-box;
-  }
-
-  .error {
-    border: 1px solid #df8f90;
-    background-color: #ffd2d3;
-    border-radius: 4px;
-    padding: 6px;
-    margin-bottom: 15px;
-    display: block;
-  }
-
-  .hint {
-    color: grey;
-    padding-bottom: 15px;
-    font-size: 11px;
-    display: block;
-  }
-
-  input[type=submit] {
-    @extend .mobile-button-primary;
-
-    margin-top: 10px;
   }
 }
